# reportes_python

./: .gitignore  README.md  hubspot_extract.py  main.py  pyproject.toml
config/: config.py
conversor_horario/: conversor_zona_horaria.py
database/: database_conexion.py  querys.py
pages/AT/: Internet_sercice.py  home_services.py
pages/Frontier/: Frontier.py
